Fix flex-box on safari

--- a/css/main.scss
+++ b/css/main.scss
@@ -345,12 +345,15 @@ header {
             max-height: 100%;
         }
         &.gold {
+            flex-basis: 25%;
             max-width: 25%;
         }
         &.silver {
+            flex-basis: 15%;
             max-width: 15%;
         }
         &.bronze {
+            flex-basis: 15%;
             max-width: 15%;
         }
     }
@@ -494,12 +497,15 @@ footer {
         .sponsor {
             margin: 1em;
             &.gold {
+                flex-basis: 38%;
                 max-width: 38%;
             }
             &.silver {
+                flex-basis: 22%;
                 max-width: 22%;
             }
             &.bronze {
+                flex-basis: 15%;
                 max-width: 15%;
             }
         }
